# Music2Taiko

./: .gitignore  AGENTS.md  README.en.md  README.ja.md  README.md  copy_motif_redlead_to_opentaiko.ps1  pyproject.toml
derived/tja-creator/01 OpenTaiko Chapter I/: audio_drum_event_summary.json  manifest.json
derived/tja-creator/02 OpenTaiko Chapter II/: manifest.json  pattern_stats.json  tja_summary.json
derived/tja-creator/03 OpenTaiko Chapter III/: manifest.json  tja_summary.json
drum2taiko/: __init__.py  __main__.py  cli.py  creator.py  dataset.py  pipeline.py  review.py
drum2taiko/analysis/: candidates.py
drum2taiko/io/: psygodot.py  tja.py
drum2taiko/separation/: __init__.py  demucs.py
music2taiko/: __init__.py  __main__.py  cli.py  creator.py  dataset.py  pipeline.py  review.py
music2taiko/analysis/: __init__.py  candidates.py
music2taiko/audio/: __init__.py  ogg.py  source.py
music2taiko/io/: __init__.py  psygodot.py  tja.py
music2taiko/separation/: demucs.py
skills/taiko-chart-authoring/: SKILL.md
skills/tja-creator/: SKILL.md
tests/: test_analysis.py  test_audio_source.py  test_cli.py  test_creator.py  test_dataset.py  test_demucs_separation.py  test_packaging.py  test_pipeline.py  test_psygodot.py  test_review.py  test_tja.py
tja-wiki/01 OpenTaiko Chapter I/: pattern_stats.json  tja_summary.json
tja-wiki/02 OpenTaiko Chapter II/: audio_drum_event_summary.json
tja-wiki/03 OpenTaiko Chapter III/: audio_drum_event_summary.json  manifest.json  pattern_stats.json
tja-wiki/corpus/: pattern_stats.json  tja_summary.json
(+15 files in other folders)
