[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "music2taiko"
version = "0.1.0"
description = "Convert any music to Taiko TJA."
requires-python = ">=3.10"
dependencies = ["librosa>=0.10", "numpy>=1.24", "soundfile>=0.13", "demucs"]

[project.scripts]
music2taiko = "music2taiko.cli:main"

[tool.setuptools.packages.find]
include = ["music2taiko*"]
